# auto-test-server

./: .gitignore  FIXES.md  FIXES_SUMMARY.md  PROJECT_SUMMARY.md  README.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  test_fixes.py  verify_fixes.py
common/: __init__.py  config.py
common/utils/: __init__.py  logging.py
config/: __init__.py  config.yaml  global_vars.yaml  paths.py
config/env/: prod.yaml  test.yaml
docs/: architecture.md  curl_to_yaml_guide.md  data_cleanup.md  data_cleanup_summary.md  data_extraction_processing.md  default_headers.md  default_headers_fix_summary.md  extract_data_flow_fix.md  marker_optimization_guide.md  marker_optimization_summary.md  marker_quick_reference.md  module_info_definition.md  quick_start.md  test_case_generation.md  test_case_generation_summary.md  test_execution_order.md  test_execution_order_summary.md  usage_guide.md  yaml_loader_usage.md  yaml_template.md
hooks/: __init__.py  custom_hooks.py
scripts/: curl_to_yaml.py
server/: README.md  __init__.py  main.py  start_server.py
server/api/: __init__.py  auth.py  projects.py  roles.py  testcases.py  users.py
server/auth/: auth.py
server/docs/: API_DOCUMENTAION.md  DATABASE_SETUP.md
server/infrastructure/: __init__.py
server/infrastructure/persistence/: __init__.py  database.py  models.py
server/interfaces/: __init__.py
server/interfaces/http/: __init__.py
server/interfaces/http/api/: __init__.py  auth.py  dashboard.py  executions.py  projects.py  reports.py  roles.py  testcases.py  users.py
server/interfaces/ws/: __init__.py
server/interfaces/ws/websocket/: __init__.py  manager.py
server/models/: __init__.py  database.py  init_db.py  models.py
server/schemas/: __init__.py  schemas.py
server/websocket/: __init__.py  manager.py
src/: __init__.py
src/allure_helpers/: __init__.py  report_generator.py
src/api/: __init__.py  test_dynamic.py  test_generator.py
src/api/test_cases/: __init__.py
src/core/: __init__.py  client.py  context.py  parser.py  validator.py
src/fixtures/: __init__.py  fixtures.py  login_fixture.py
src/hooks/: __init__.py  allure_hooks.py  custom_hooks.py  dependency_hooks.py  pytest_hooks.py
src/utils/: __init__.py  cleaner.py  config_manager.py  curl_parser.py  curl_scanner.py  extractor.py  file_downloader.py  global_login.py  logger.py  notifier.py  scenario_generator.py  yaml_generator.py  yaml_loader.py
test_data/: advertisers_manage.yaml  ddj_manage.yaml  dsp_app_manage.yaml  kernel_api.yaml  offer_manage.json  product_module.json  report_center.yaml  user_module.yaml
test_data/login/: prod.yaml  test.yaml
